force-app/main/default/objects/UpdateSSOUser__e/UpdateSSOUser__e.object-meta.xml
<CustomObject>
    <label>UpdateSSOUser</label>
    <pluralLabel>UpdateSSOUsers</pluralLabel>
</CustomObject>