force-app/main/default/objects/UpdateSSOUser__e/fields/CommunityNickname__c.field-meta.xml
<CustomField>
    <fullName>CommunityNickname__c</fullName>
    <label>CommunityNickname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>