force-app/main/default/objects/UpdateSSOUser__e/fields/FederationIdentifier__c.field-meta.xml
<CustomField>
    <fullName>FederationIdentifier__c</fullName>
    <label>FederationIdentifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>